--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed Riflan</title>
+    <link rel="shortcut icon" type="image/png" href="MR.png">
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -80,13 +81,13 @@
         </div>
 
         <div class="box">
-            <span>50%</span>
-            <h3>PhP</h3>
+            <span>60%</span>
+            <h3>PHP</h3>
         </div>
 
         <div class="box">
-            <span>75%</span>
-            <h3>WordPress</h3>
+            <span>55%</span>
+            <h3>Javascript</h3>
         </div>
 
     </div>
