--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <h3>Hi there!</h3>
     <h1>I am <span>Mohamed Riflan</span></h1>
-    <p>I studied Arts field in my A/L. Currently I studies at open university of Sri Lanka (Nawale). Also IT field is my favourite at all time. Currently I am studying Ceyber Security!
+    <p>I Studied Arts in advanced level period. Currently I Studies At the Open University Of Sri Lanka (Nawale). Also, the IT Field Is My Favourite At All Times. Currently, I Am Studying Cyber Security!
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
